--- a/css/index.css
+++ b/css/index.css
@@ -1,38 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap');
+
+
 :root{
   --main-color: #82DBD8;
   --button-border-color: #2F8F9D;
+  --blanco: #dddddd;
+
 }
 
 body {
-  font-family:Arial, Helvetica, sans-serif;
-  background-color: #B3E8E5;
+  font-family: 'Poppins', sans-serif;
+  background-color: #30475E;
+  display: flex;
+  color: var(--blanco);
+  font-weight: 400;
+  font-size: 1.2em;
+
 }
 
 header {
-  display: flex;
+  position: fixed;
   flex-direction: column;
-  background-color: var(--main-color);
-}
-
-aside{
-  width: 40%;
+  inset: 20px 0 20px 20px;
+  justify-content: flex-start;
+  width: 75px;
+  min-height: 100px;
+  height: 100vh;
+  border-radius: 40px;
+  transition: 0.5;
   display: flex;
-  flex-direction: row;
-  background-color: var(--main-color);
-  margin: 15px;
-  align-content: center;
+  justify-content: center;
   align-items: center;
+
 }
 
-aside button {
-  margin: 10px;
+aside {
+  border: 1px solid rgba(77, 77, 77, 0.178);
+  height: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 40px;
+  box-shadow: 0 0 20px rgba(138, 138, 138, 0.404);
+  background-color: #F5F5F5;
+}
+
+main {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 150px;
+  margin-top: 150px;
 }
 
 section {
   padding: 15px;
   margin: 5px;
 }
-
+/* Esconde botones */
 #post{
   display: none;
 }
@@ -49,100 +76,221 @@ section {
 display: none;
 }
 
-#form-post{
-  display:flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 500px;
+#hiddensearchButton{
+display: none;
 }
 
-#form-put{
-  display:flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 500px;
-}
 
-#showPost{
-  max-width: 50px;
-  border-radius: 20%;
-  border-color: #2F8F9D;
+
+/*  Botones */
+
+#showPost, #showPut, #searchButton, #hiddenPost, #hiddenPut, #hiddensearchButton{
+  width: 60px;
+  max-width: 70px;
+  min-width: 55px;
+  border-radius: 15px;
+  border: 1px solid;
+  border-color: #31313118;
   color:white;
-  background-color: #3BACB6;
-  height: 50px;
-  margin: 6px;
+  background-color: #F05454;
+  height: 45px;
+  margin: 10px;
+  box-shadow: 0px 0px 5px #f054543a;
+}
+
+#showPost:before{
+  content: '';
+		display: inline-block;
+		height: 40px;
+		position: absolute;
+		bottom: -1px;
+		left: 10px;
+		right: 10px;
+		z-index: -1;
+		border-radius: 2em;
+		filter: blur(14px) brightness(0.9);
+		transform-style: preserve-3d;
+		transition: all 0.3s ease-out;
 }
 #showPost:hover{
-  background-color:#2F8F9D;
-  color:white
-}
-
-#hiddenPost{
-  max-width: 70px;
-  border-radius: 20%;
-  border-color: #2F8F9D;
-  color:white;
-  background-color: #3BACB6;
-  height: 50px;
-  margin: 6px;
-}
-#hiddenPost:hover{
-  background-color:#2F8F9D;
-  color:white
-}
-
-#hiddenPut{
-  max-width: 70px;
-  border-radius: 20%;
-  border-color: #2F8F9D;
-  color:white;
-  background-color: #3BACB6;
-  height: 50px;
-  margin: 6px;
-}
-#hiddenPut:hover{
-  background-color:#3BACB6;
-  color:white
-}
-
-#showPut{
-  max-width: 50px;
-  width: 45px;
-  border-radius: 20%;
-  border-color: var(--button-border-color);
-  color:white;
-  background-color: #3BACB6;
-  height: 50px;
+  background-color:#ee3a3a;
+  color:var(--blanco);
+  transform: scale(1.10);
+  transition: transform 0.5s ease-in-out;
+  filter: brightness(.9) contrast(1.2);
 }
 
 #showPut:hover{
-  background-color:#3BACB6;
-  color:white
+  background-color:#ee3a3a;
+  color:var(--blanco);
+  transform: scale(1.10);
+  transition: transform 0.5s ease-in-out;
+  filter: brightness(.9) contrast(1.2);
+}
+#searchButton:hover{
+  background-color:#ee3a3a;
+  color:var(--blanco);
+  transform: scale(1.10);
+  transition: transform 0.5s ease-in-out;
+  filter: brightness(.9) contrast(1.2);
 }
 
-#showDelete{
-  max-width: 200px;
-  border-radius: 20%;
-  border-color: #2F8F9D;
-  color:white;
-  background-color: #3BACB6;
-  height: 50px;
+#hiddenPost:hover{
+  background-color:#ee3a3a;
+  color:var(--blanco);
+  transform: scale(1.10);
+  transition: transform 0.5s ease-in-out;
+  filter: brightness(.9) contrast(1.2);
 }
 
-#showDelete:hover{
-  background-color:#3BACB6;
-  color:white
+#hiddenPut:hover{
+  background-color:#ee3a3a;
+  color:var(--blanco);
+  transform: scale(1.10);
+  transition: transform 0.5s ease-in-out;
+  filter: brightness(.9) contrast(1.2);
+}
+#hiddensearchButton{
+  background-color:#ee3a3a;
+  color:var(--blanco);
+  transform: scale(1.10);
+  transition: transform 0.5s ease-in-out;
+  filter: brightness(.9) contrast(1.2);
+}
+
+/* Fin botones*/
+
+/* Formularios*/
+
+#form-post{
+  background-color: var(--blanco);
+  color: #30475E;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-top: 130px;
+  margin-left: 50px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50vh;
+  height: 60%;
+  padding: 15px;
+  font-weight: 500;
+}
+#form-post p{
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+#form-post input{
+  border-radius: 10px;
+  border: none;
+  text-align: center;
+  width: 40%;
+  height: 30%;
+  margin-top: 6px;
+  margin-bottom: 4px;
+}
+#form-post .post-button{
+  margin-top: 20px;
+  width: 20%;
+  height: 25px;
+  background-color: ;
+  margin-bottom: 20px;
+  background-color: #F05454;
+  color: var(--blanco);
+
+}
+#form-post .post-button:hover{
+  background-color:#ee3a3a;
+  color:var(--blanco);
+  transform: scale(1.10);
+  transition: transform 0.5s ease-in-out;
+  filter: brightness(.9) contrast(1.2);
+
+}
+
+#form-put{
+  background-color: var(--blanco);
+  color: #30475E;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-top: 130px;
+  margin-left: 50px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50vh;
+  height: 60%;
+  padding: 15px;
+  font-weight: 500;
+}
+#form-put p{
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+#form-put input{
+  border-radius: 10px;
+  border: none;
+  text-align: center;
+  width: 40%;
+  height: 30%;
+  margin-top: 6px;
+  margin-bottom: 4px;
+}
+#form-put .put-button{
+  margin-top: 20px;
+  width: 20%;
+  height: 25px;
+  background-color: ;
+  margin-bottom: 20px;
+  background-color: #F05454;
+  color: var(--blanco);
+
+}
+#form-put .put-button:hover{
+  background-color:#ee3a3a;
+  color:var(--blanco);
+  transform: scale(1.10);
+  transition: transform 0.5s ease-in-out;
+  filter: brightness(.9) contrast(1.2);
+
+}
+.busqueda{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100vh;
+  margin-top: 305px;
+  flex-direction: column;
+
 }
 
 #searchBar{
-  max-width: 1500px;
+  display:none;
+  width: 50%;
+}
+#searchBarText{
+  width: 100%;
+  height: 50px;
   border-radius: 20px;
-  border-color: var(--button-border-color);
+  border: none;
   color:white;
   background-color: #f5f5f0;
   height: 30px;
   color: black;
-  display:none;
+
   text-align: center;
+  margin-bottom: 30px;
+}
+#datos{
+  color: var(--blanco);
+  align-items: center;
+  justify-content: center;
 }
 
